[gd_scene load_steps=18 format=3 uid="uid://dem22mibj6rep"]

[ext_resource type="Texture2D" uid="uid://13im2tuqhrgt" path="res://images/Idle (32x32).png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bjk1okbuhxu16" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://vifqmo1qqy2w" path="res://scenes/bullet.tscn" id="2_qhqgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_3vyb7")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_3vyb7")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_3vyb7")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_urp6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 44.0
height = 114.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]
size = Vector2(1080, 0)

[node name="Node2" type="Node"]

[node name="Player" type="Area2D" parent="." groups=["player"]]
position = Vector2(548, 1820)
script = ExtResource("1_g2els")
bulletScene = ExtResource("2_qhqgy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
position = Vector2(0, -2)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_urp6f")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(2, 9)
shape = SubResource("CapsuleShape2D_g2els")

[node name="ShootTimer" type="Timer" parent="Player"]
wait_time = 0.5
autostart = true

[node name="HealthLimit" type="Area2D" parent="."]
position = Vector2(540, 1766)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthLimit"]
shape = SubResource("RectangleShape2D_3vyb7")

[connection signal="timeout" from="Player/ShootTimer" to="Player" method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="HealthLimit" to="Player" method="_on_health_limit_area_entered"]
